# rag_shared

./: .env.example  .gitignore  __init__.py  adapters.py  config.py  pyproject.toml  rag_service.py  requirements.txt
playground/: main.py  readme.md  shared.py
playground/tabs/: __init__.py  chunks_tab.py  ingest_tab.py  query_tab.py  retrieve_tab.py
